# Blog

blog-service/: .env  Cargo.toml
blog-service/src/: config.rs  main.rs
blog-service/src/domain/: post.rs
