[package]
name = "blog-service"
version = "0.1.0"
authors = ["WaylonCoffee <waylon_coffee@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
axum = "0.5"
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
config = "0.13.1"
dotenv = "0.15.0"
deadpool-postgres = "0.9"
tokio-postgres = "0.7.6"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"